fix animation clipping

--- a/css/animations.css
+++ b/css/animations.css
@@ -574,3 +574,135 @@
     opacity: 1;
   }
 }
+
+.animate-slide-in-left {
+  -webkit-animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+/**
+ * ----------------------------------------
+ * animation slide-in-left
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-slide-in-out-left {
+  -webkit-animation: slide-in-out-left 5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    infinite both;
+  animation: slide-in-out-left 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite
+    both;
+}
+
+@-webkit-keyframes slide-in-out-left {
+  0% {
+    -webkit-transform: translateX(-1000px) scaleX(1);
+    transform: translateX(-1000px) scaleX(1);
+    opacity: 0;
+  }
+  25% {
+    -webkit-transform: translateX(0) scaleX(1);
+    transform: translateX(0) scaleX(1);
+    opacity: 1;
+  }
+  75% {
+    -webkit-transform: translateX(0) scaleX(-1);
+    transform: translateX(0) scaleX(-1);
+
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px) scaleX(-1);
+    transform: translateX(-1000px) scaleX(-1);
+    opacity: 0;
+  }
+}
+@keyframes slide-in-out-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  25% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+  70% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+
+    opacity: 1;
+  }
+  75% {
+    -webkit-transform: translateX(0) scaleX(-1);
+    transform: translateX(0) scaleX(-1);
+
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px) scaleX(-1);
+    transform: translateX(-1000px) scaleX(-1);
+    opacity: 0;
+  }
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2024-3-14 19:16:51
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation slide-out-left
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-out-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+}
+@keyframes slide-out-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+}
